load cifar10 dataset

--- a/imagenet_class.ipynb
+++ b/imagenet_class.ipynb
@@ -6,26 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://proceedings.neurips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf"
+    "# paper\n",
+    "# https://proceedings.neurips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf\n",
+    "\n",
+    "# dataset\n",
+    "# https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def unpickle(file):\n",
+    "    import pickle\n",
+    "    with open(file, 'rb') as fo:\n",
+    "        dict = pickle.load(fo, encoding='bytes')\n",
+    "    return dict\n"
+   ]
   },
   {
    "cell_type": "code",
